--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "demos",
-  "version": "0.1.1",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "@vituum/vite-plugin-pug": "^1.1.0",
-    "stylus": "^0.62.0",
-    "vite": "5.0.1"
-  },
-  "author": "kbtz <contact@kbtz.dev>",
-  "license": "Unlicense"
+	"name": "demos",
+	"version": "0.1.1",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"postinstall": "lnx ../../pvg"
+	},
+	"author": "kbtz <contact@kbtz.dev>",
+	"license": "Unlicense"
 }
