--- a/service-rating/data.yaml
+++ b/service-rating/data.yaml
@@ -1,14 +1,25 @@
 ratings: [bad, poor, fair, good, great]
-eyebox: l 0 20 l -20 0 Z
-eyebrow: # also used to clip the eye circle when concatenated with eyebox
-	- M 25 38 l 10  6 l 10  6
-	- M 25 45 l 10 -5 l 10 -5
-	- M 25 35 l 10  0 l 10  0
-	- M 25 35 l 10  0 l 10  0
-	- M 29 49 l  6 -6 l  6  6
-mouth: # two redundant curves so they can split nicely when the mouth opens
-	- M30 72 C 40 60 60 60 70 72 M30 72 C 40 60 60 60 70 72
-	- M30 70 C 35 65 65 65 70 70 M30 70 C 35 65 65 65 70 70
-	- M35 65 C 35 65 65 65 65 65 M35 65 C 35 65 65 65 65 65
-	- M30 65 C 40 75 60 75 70 65 M30 65 C 40 75 60 75 70 65
-	- M30 60 C 30 60 70 60 70 60 M30 60 C 30 85 70 85 70 60
+paths:
+	eyebox: l 0 20 l -20 0 Z
+	eyebrow: # also used to clip the eye circle when concatenated with eyebox
+		- M 25 38 l 10  6 l 10  6
+		- M 25 45 l 10 -5 l 10 -5
+		- M 25 35 l 10  0 l 10  0
+		- M 25 35 l 10  0 l 10  0
+		- M 29 49 l  6 -6 l  6  6
+	mouth: # two redundant curves so they can split nicely when the mouth opens
+		- M30 72 C 40 60 60 60 70 72 M30 72 C 40 60 60 60 70 72
+		- M30 70 C 35 65 65 65 70 70 M30 70 C 35 65 65 65 70 70
+		- M35 65 C 35 65 65 65 65 65 M35 65 C 35 65 65 65 65 65
+		- M30 65 C 40 75 60 75 70 65 M30 65 C 40 75 60 75 70 65
+		- M30 60 C 30 60 70 60 70 60 M30 60 C 30 85 70 85 70 60
+	star: >-
+		M 0 -8 L
+		+2.35 -3.23  7.60 -2.47  3.80  1.23  4.70  6.47 0 4
+		-4.70  6.47 -3.80  1.23 -7.60 -2.47 -2.35 -3.23 Z
+	sparkle: >-
+		M  0.58 -0.80 L  4.70 -6.47
+		M -0.58 -0.80 L -4.70 -6.47
+		M -0.95  0.30 L -7.60  2.47
+		M  0.00  1.00 L  0.00  8.00
+		M  0.90  0.30 L  7.60  2.47
